[package]
name = "raytracer"
version = "0.1.0"
authors = ["Adam Leach <adam.leach@dur.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.2", features = ["rayon"]}
rayon = "1.5"
image = "0.23.14"
rand = "0.8.3"